# 360Transformations

./: .gitignore  README.rst  system_architecture.tex
academicPaper/: .gitignore  Makefile  README.rst  abstract.tex  acronymes.tex  alternative_paper_layout.tex  background.tex  biblio.bib  cdf-dataset.tex  checkWriting.py  conclusion.tex  dataset.tex  deliveryChain.tex  distance_quality.tex  distance_quality_psnr.tex  evaluation.tex  geometricTestbed.tex  global.csv  intro.tex  latexrun  mainACM.tex  newDelivery.tex  new_intro.tex  new_related.tex  paper.tex  paperSpecificMacro.tex  plot_box.tex  related.tex  removeAuthorIndicationMod.py  settings.tex  sig-alternate.cls  system_architecture.tex  testbed.tex  tikzset.tex  videoDeliveryArchitecture.tex
academicPaper/arXiv/: mergeLatex.py
academicPaper/blog/: post.rst
academicPaper/plots/: 2dProjections.tex  cdf-dataset.tex  deliveryChain.tex  distance_quality.tex  distance_quality_psnr.tex  newDelivery.tex  plot_box.tex  plot_instant_distance.tex  plot_instant_qoe.tex  plot_instant_qoe_segmentSize.tex  qecNbToQoE.tex  testbed.tex  videoDeliveryArchitecture.tex
academicPaper/results/: .distanceQuality.csv.swp  bmxp01_00_expectedLiveQoE_0.5s_qualityAverageEquiTiled.csv  bmxp01_00_expectedLiveQoE_0.5s_qualityCubeMapLower.csv  bmxp01_00_expectedLiveQoE_0.5s_qualityEquirectangularTiledLower.csv  bmxp01_00_expectedLiveQoE_0.5s_qualityPyramidLower.csv  bmxp01_00_expectedLiveQoE_0.5s_qualityRhombicDodeca.csv  bmxp01_00_expectedLiveQoE_0.5s_qualityRhombicDodecaLower.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityAverageEquiTiled.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityCubeMapLower.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityEquirectangularTiledLower.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityPyramidLower.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityRhombicDodeca.csv  bmxp01_00_expectedLiveQoE_1.5s_qualityRhombicDodecaLower.csv  bmxp01_00_expectedLiveQoE_1s_qualityAverageEquiTiled.csv  bmxp01_00_expectedLiveQoE_1s_qualityCubeMapLower.csv  bmxp01_00_expectedLiveQoE_1s_qualityEquirectangularTiledLower.csv  bmxp01_00_expectedLiveQoE_1s_qualityPyramidLower.csv  bmxp01_00_expectedLiveQoE_1s_qualityRhombicDodeca.csv  (+51 more)
academicPaper/slides/: .gitignore  (+18 more)
dataset/: .gitignore
juliaCode/: README.md  anglesRhombicDodeca.jl  common.jl  cube.jl  equirectTranslation.jl  rhombicdodeca.jl  rotation.jl
transformation/: .dockerignore  .gitignore  CMakeLists.txt  Config.ini  Config2.ini  Dockerfile  Dockerfile.archlinux  LICENCE.txt  README.rst  conanfile.txt
transformation/LibAvWrapper/: CMakeLists.txt
transformation/LibAvWrapper/inc/: Packet.hpp  VideoReader.hpp  VideoWriter.hpp
transformation/LibAvWrapper/src/: Packet.cpp  VideoReader.cpp  VideoWriter.cpp
transformation/MainProject/: CMakeLists.txt
transformation/MainProject/inc/: Common.hpp  ConfigParser.hpp  DynamicRotationDecorator.hpp  HorizontalOffsetTrans.hpp  Layout.hpp  LayoutBarrel.hpp  LayoutCubeMap.hpp  LayoutCubeMap2.hpp  LayoutCubeMapBased.hpp  LayoutDecorator.hpp  LayoutEquirectangular.hpp  LayoutEquirectangularTiles.hpp  LayoutFactory.hpp  LayoutFlatFixed.hpp  LayoutPyramidal.hpp  LayoutPyramidal2.hpp  LayoutPyramidalBased.hpp  LayoutRhombicdodeca.hpp  LayoutRhombicdodecaBased.hpp  LayoutUniformOnSphere.hpp  LayoutViewport.hpp  OffsetTrans.hpp  Picture.hpp  Quaternion.hpp  RotationDecorator.hpp  Vector.hpp  VectorialTrans.hpp  dynamicPosition.hpp
transformation/MainProject/src/: DynamicRotationDecorator.cpp  HorizontalOffsetTrans.cpp  Layout.cpp  LayoutBarrel.cpp  LayoutCubeMap.cpp  LayoutCubeMap2.cpp  LayoutCubeMapBased.cpp  LayoutEquirectangular.cpp  LayoutEquirectangularTiles.cpp  LayoutFactory.cpp  LayoutFlatFixed.cpp  LayoutPyramidal.cpp  LayoutPyramidal2.cpp  LayoutPyramidalBased.cpp  LayoutRhombicdodeca.cpp  LayoutRhombicdodecaBased.cpp  LayoutViewport.cpp  OffsetTrans.cpp  Picture.cpp  RotationDecorator.cpp  dynamicPosition.cpp  main.cpp
transformation/MainProject/test/: EquirectangularLayout_test.cpp  Layout_test.cpp  Quaternion_test.cpp  Vector_test.cpp  main.cpp
transformation/Scripts/: .gitignore  README.rst  client.py  main.py  mainFixedBR.py  mainFixedBRFixedDistances.py  server.py
transformation/Scripts/FormatResults/: CSVGenerator.py  PDFGenerator.py  __init__.py
transformation/Scripts/GenerateVideo/: GenerateVideo.py  Quality.py  __init__.py
transformation/Scripts/LayoutGenerators/: Constants.py  CubeMapLayout.py  EquirectangularLayout.py  EquirectangularTiledLayout.py  FlatFixedLayout.py  Layout.py  LayoutManager.py  LayoutStorage.py  PyramidLayout.py  QEC.py  RhombicDodeca.py  Rotation.py  __init__.py
transformation/Scripts/LayoutGenerators/QecCenters/: 1.txt  10.txt  11.txt  12.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  4.txt  42.txt  5.txt  6.txt  7.txt  8.txt  9.txt
transformation/Scripts/MultiProcess/: Client.py  Job.py  Results.py  Server.py  Video.py  Worker.py  __init__.py
transformation/Scripts/SearchTools/: SearchTools.py  __init__.py
transformation/examples/: Config_1.ini  Config_2.ini  Config_3.ini  Config_4.ini  Config_5.ini  Config_6.ini  Config_7.ini  Config_8.ini  README.rst  Timelapse-CIw8R8thnm8_0.txt
transformation/src/: .cubeMap.cpp.swp  .main.cpp.swp  GlobalArgsStructure.hpp  common.hpp  configParser.hpp  cubeMap.cpp  cubeMap.hpp  equirectangular.cpp  equirectangular.hpp  layout.cpp  layout.hpp  layoutCubeMap.cpp  layoutCubeMap.hpp  layoutCubeMap2.cpp  layoutCubeMap2.hpp  layoutCubeMapBased.cpp  layoutCubeMapBased.hpp  layoutEquirectangular.hpp  layoutEquirectangularTiles.cpp  layoutEquirectangularTiles.hpp  layoutFlatFixed.cpp  layoutFlatFixed.hpp  layoutPyramidal.cpp  layoutPyramidal.hpp  layoutPyramidal2.cpp  layoutPyramidal2.hpp  layoutPyramidalBased.cpp  layoutPyramidalBased.hpp  layoutRhombicdodeca.cpp  layoutRhombicdodeca.hpp  layoutRhombicdodecaBased.cpp  layoutRhombicdodecaBased.hpp  main.cpp  picture.cpp  picture.hpp
transformation/test_conf/: CMakeLists.txt  conanfile.txt
(+57 files in other folders)
